# JAQL

./: README.md  jaql.py  pyproject.toml  requirements.txt  test.md
examples/: JAQL-example-pipelines.yaml  disk-usage-analysis.yaml  generate-axis-rules.yaml  high-cpu-processes.yaml  input.json  listening-ports.yaml  network-connections.yaml  nonrunning-services.yaml  running-services.yaml  security-check.yaml  system-analysis.yaml  transform.yaml
jaql/: __init__.py  cli.py  io.py  parser.py  pipes.py  runner.py  utils.py
tests/: test_multidoc_yaml.py  test_pipes.py  test_runner.py
